@@ -1,3 +1,8 @@
+2006-Nov-12  Heikki Junnila <hjunnila@users.sf.net>
+	* Changed device manager to use themed colors in device info
+	* Changed the X gap between two channels in monitor from 5px to 10px
+	* Removed channel variables from monitor
+
 2006-Nov-09  Heikki Junnila <hjunnila@users.sf.net>
 	* Fixed monitor to display device labels on as many rows as necessary.
 
